Update to sprint II
Updated project to start Sprint II